tests/neg/Class4Import.hs
{-# LANGUAGE ScopedTypeVariables #-}
{-@ LIQUID "--no-termination" @-}

module Class4Import where

import Class4

instance Frog () where
